src/interpreter/LambdaParser.js
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from 'antlr4';
import LambdaListener from './LambdaListener.js';
import LambdaVisitor from './LambdaVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class LambdaParser extends antlr4.Parser {

    static grammarFileName = "java-escape";
    static literalNames = [ null, "'.'", "'='", null, "'\\lambda'", "'('", 
                            "')'" ];
    static symbolicNames = [ null, null, null, "VARIABLE", "LAMBDA", "LPAR", 
                             "RPAR", "WS" ];
    static ruleNames = [ "redex", "term", "body", "abstraction", "application", 
                         "definition", "var" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = LambdaParser.ruleNames;
        this.literalNames = LambdaParser.literalNames;
        this.symbolicNames = LambdaParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 4:
    	    		return this.application_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    application_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	redex() {
	    let localctx = new RedexContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, LambdaParser.RULE_redex);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 14;
	        this.term();
	        this.state = 15;
	        this.match(LambdaParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	term() {
	    let localctx = new TermContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, LambdaParser.RULE_term);
	    try {
	        this.state = 25;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 17;
	            this.match(LambdaParser.VARIABLE);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 18;
	            this.abstraction();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 19;
	            this.application(0);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 20;
	            this.match(LambdaParser.LPAR);
	            this.state = 21;
	            this.term();
	            this.state = 22;
	            this.match(LambdaParser.RPAR);
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 24;
	            this.definition();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	body() {
	    let localctx = new BodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, LambdaParser.RULE_body);
	    try {
	        this.state = 34;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 27;
	            this.abstraction();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 28;
	            this.application(0);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 29;
	            this.match(LambdaParser.VARIABLE);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 30;
	            this.match(LambdaParser.LPAR);
	            this.state = 31;
	            this.term();
	            this.state = 32;
	            this.match(LambdaParser.RPAR);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	abstraction() {
	    let localctx = new AbstractionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, LambdaParser.RULE_abstraction);
	    try {
	        this.state = 44;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 4:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 36;
	            this.match(LambdaParser.LAMBDA);
	            this.state = 37;
	            this.match(LambdaParser.VARIABLE);
	            this.state = 38;
	            this.match(LambdaParser.T__0);
	            this.state = 39;
	            this.body();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 40;
	            this.match(LambdaParser.LPAR);
	            this.state = 41;
	            this.abstraction();
	            this.state = 42;
	            this.match(LambdaParser.RPAR);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	application(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ApplicationContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 8;
	    this.enterRecursionRule(localctx, 8, LambdaParser.RULE_application, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 59;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 47;
	            this.match(LambdaParser.VARIABLE);
	            this.state = 48;
	            this.term();
	            break;

	        case 2:
	            this.state = 49;
	            this.var_();
	            this.state = 50;
	            this.term();
	            break;

	        case 3:
	            this.state = 52;
	            this.abstraction();
	            this.state = 53;
	            this.term();
	            break;

	        case 4:
	            this.state = 55;
	            this.match(LambdaParser.LPAR);
	            this.state = 56;
	            this.application(0);
	            this.state = 57;
	            this.match(LambdaParser.RPAR);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 65;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new ApplicationContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, LambdaParser.RULE_application);
	                this.state = 61;
	                if (!( this.precpred(this._ctx, 2))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                }
	                this.state = 62;
	                this.term(); 
	            }
	            this.state = 67;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	definition() {
	    let localctx = new DefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, LambdaParser.RULE_definition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 68;
	        this.match(LambdaParser.VARIABLE);
	        this.state = 69;
	        this.match(LambdaParser.T__1);
	        this.state = 70;
	        this.term();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	var_() {
	    let localctx = new VarContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, LambdaParser.RULE_var);
	    try {
	        this.state = 79;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 72;
	            this.match(LambdaParser.LPAR);
	            this.state = 73;
	            this.match(LambdaParser.VARIABLE);
	            this.state = 74;
	            this.match(LambdaParser.RPAR);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 75;
	            this.match(LambdaParser.LPAR);
	            this.state = 76;
	            this.var_();
	            this.state = 77;
	            this.match(LambdaParser.RPAR);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

LambdaParser.EOF = antlr4.Token.EOF;
LambdaParser.T__0 = 1;
LambdaParser.T__1 = 2;
LambdaParser.VARIABLE = 3;
LambdaParser.LAMBDA = 4;
LambdaParser.LPAR = 5;
LambdaParser.RPAR = 6;
LambdaParser.WS = 7;

LambdaParser.RULE_redex = 0;
LambdaParser.RULE_term = 1;
LambdaParser.RULE_body = 2;
LambdaParser.RULE_abstraction = 3;
LambdaParser.RULE_application = 4;
LambdaParser.RULE_definition = 5;
LambdaParser.RULE_var = 6;

class RedexContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LambdaParser.RULE_redex;
    }

	term() {
	    return this.getTypedRuleContext(TermContext,0);
	};

	EOF() {
	    return this.getToken(LambdaParser.EOF, 0);
	};

	enterRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.enterRedex(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.exitRedex(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LambdaVisitor ) {
	        return visitor.visitRedex(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class TermContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LambdaParser.RULE_term;
    }

	VARIABLE() {
	    return this.getToken(LambdaParser.VARIABLE, 0);
	};

	abstraction() {
	    return this.getTypedRuleContext(AbstractionContext,0);
	};

	application() {
	    return this.getTypedRuleContext(ApplicationContext,0);
	};

	LPAR() {
	    return this.getToken(LambdaParser.LPAR, 0);
	};

	term() {
	    return this.getTypedRuleContext(TermContext,0);
	};

	RPAR() {
	    return this.getToken(LambdaParser.RPAR, 0);
	};

	definition() {
	    return this.getTypedRuleContext(DefinitionContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.enterTerm(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.exitTerm(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LambdaVisitor ) {
	        return visitor.visitTerm(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class BodyContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LambdaParser.RULE_body;
    }

	abstraction() {
	    return this.getTypedRuleContext(AbstractionContext,0);
	};

	application() {
	    return this.getTypedRuleContext(ApplicationContext,0);
	};

	VARIABLE() {
	    return this.getToken(LambdaParser.VARIABLE, 0);
	};

	LPAR() {
	    return this.getToken(LambdaParser.LPAR, 0);
	};

	term() {
	    return this.getTypedRuleContext(TermContext,0);
	};

	RPAR() {
	    return this.getToken(LambdaParser.RPAR, 0);
	};

	enterRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.enterBody(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.exitBody(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LambdaVisitor ) {
	        return visitor.visitBody(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AbstractionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LambdaParser.RULE_abstraction;
    }

	LAMBDA() {
	    return this.getToken(LambdaParser.LAMBDA, 0);
	};

	VARIABLE() {
	    return this.getToken(LambdaParser.VARIABLE, 0);
	};

	body() {
	    return this.getTypedRuleContext(BodyContext,0);
	};

	LPAR() {
	    return this.getToken(LambdaParser.LPAR, 0);
	};

	abstraction() {
	    return this.getTypedRuleContext(AbstractionContext,0);
	};

	RPAR() {
	    return this.getToken(LambdaParser.RPAR, 0);
	};

	enterRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.enterAbstraction(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.exitAbstraction(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LambdaVisitor ) {
	        return visitor.visitAbstraction(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ApplicationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LambdaParser.RULE_application;
    }

	VARIABLE() {
	    return this.getToken(LambdaParser.VARIABLE, 0);
	};

	term() {
	    return this.getTypedRuleContext(TermContext,0);
	};

	var_() {
	    return this.getTypedRuleContext(VarContext,0);
	};

	abstraction() {
	    return this.getTypedRuleContext(AbstractionContext,0);
	};

	LPAR() {
	    return this.getToken(LambdaParser.LPAR, 0);
	};

	application() {
	    return this.getTypedRuleContext(ApplicationContext,0);
	};

	RPAR() {
	    return this.getToken(LambdaParser.RPAR, 0);
	};

	enterRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.enterApplication(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.exitApplication(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LambdaVisitor ) {
	        return visitor.visitApplication(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class DefinitionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LambdaParser.RULE_definition;
    }

	VARIABLE() {
	    return this.getToken(LambdaParser.VARIABLE, 0);
	};

	term() {
	    return this.getTypedRuleContext(TermContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.enterDefinition(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.exitDefinition(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LambdaVisitor ) {
	        return visitor.visitDefinition(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class VarContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LambdaParser.RULE_var;
    }

	LPAR() {
	    return this.getToken(LambdaParser.LPAR, 0);
	};

	VARIABLE() {
	    return this.getToken(LambdaParser.VARIABLE, 0);
	};

	RPAR() {
	    return this.getToken(LambdaParser.RPAR, 0);
	};

	var_() {
	    return this.getTypedRuleContext(VarContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.enterVar(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LambdaListener ) {
	        listener.exitVar(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LambdaVisitor ) {
	        return visitor.visitVar(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}




LambdaParser.RedexContext = RedexContext; 
LambdaParser.TermContext = TermContext; 
LambdaParser.BodyContext = BodyContext; 
LambdaParser.AbstractionContext = AbstractionContext; 
LambdaParser.ApplicationContext = ApplicationContext; 
LambdaParser.DefinitionContext = DefinitionContext; 
LambdaParser.VarContext = VarContext; 
